# ConsoleCraftEngine

./: .gitignore  CMakeLists.txt  ConsoleCraftEngine.sln  ConsoleCraftEngine.vcxproj  ConsoleCraftEngine.vcxproj.filters  LICENSE  README.md  create_new_preoject.sh  org.flatpak.Rogue.yml  test_builds.sh
AIGame/: CMakeLists.txt
AIGame/Source/: AIGameEntryPoint.cpp
AIGame/Source/GameObjects/: Brick.cpp  Brick.h  Enemy.cpp  PlayerShip.cpp
AIGame/Source/Scenes/: AIGameScene.cpp  AIGameScene.h  EntryScene.cpp  EntryScene.h
CraftBreaker/: CMakeLists.txt
CraftBreaker/Source/: BreakerGameEntry.cpp
CraftBreaker/Source/GameObjects/: Ball.cpp  Ball.h  Breaker.cpp  Breaker.h  Brick.h
CraftBreaker/Source/Scenes/: BreakerScene.cpp  BreakerScene.h
CraftCity/: CMakeLists.txt  CraftCity.vcxproj  CraftCity.vcxproj.filters
CraftCity/Source/: CraftCityGameEntry.cpp
CraftCity/Source/BuildingSystem/: BuildHandler.cpp  BuildHandler.h  BuildingMenu.cpp  BuildingMenu.h  DemolishHandler.cpp  DemolishHandler.h
CraftCity/Source/CityStatics/: CityStatics.cpp  CityStatics.h  PlayerVault.cpp  PlayerVault.h
CraftCity/Source/GameObjects/: SelectCursor.cpp  SelectCursor.h
CraftCity/Source/GameObjects/Buildings/: Buildable.cpp  Buildable.h  BuildingTrigger.cpp  BuildingTrigger.h  House.cpp  House.h  IndustrialBuilding.cpp  IndustrialBuilding.h  Road.cpp  Road.h
CraftCity/Source/Scenes/: CraftCityMainMenuScene.cpp  CraftCityMainMenuScene.h  CraftCityScene.cpp  CraftCityScene.h
CraftCity/Source/UI/: PlayerStatsUI.cpp  PlayerStatsUI.h
CraftMatch/: CMakeLists.txt  CraftMatch.vcxproj  CraftMatch.vcxproj.filters  Grid.h
CraftMatch/Source/: CraftMatchGameEntry.cpp  Grid.cpp  Grid.h  UnitSelector.cpp  UnitSelector.h
CraftMatch/Source/GameObjects/: ClubItem.cpp  ClubItem.h  DiamondItem.cpp  DiamondItem.h  GridUnit.cpp  GridUnit.h  HeartItem.cpp  HeartItem.h  Item.cpp  Item.h  SpadesItem.cpp  SpadesItem.h
CraftMatch/Source/Grid/: Grid.h
CraftMatch/Source/Scenes/: MatchScene.cpp  MatchScene.h
CraftPhysicsTest/: CMakeLists.txt
CraftPhysicsTest/Source/: BridgeBuilderGameEntry.cpp
CraftPhysicsTest/Source/Polygons/: Car.cpp  Car.h
CraftPhysicsTest/Source/RoadCreator/: RoadCreator.cpp  RoadCreator.h
CraftPhysicsTest/Source/Scenes/: PhysicsTestScene.cpp  PhysicsTestScene.h
CraftRTS/: CMakeLists.txt
CraftRTS/Source/: CraftRTSGameEntry.cpp
CraftRTS/Source/GameObjects/: SelectCursor.h  Unit.cpp  Unit.h
CraftRTS/Source/Scenes/: RTSScene.cpp  RTSScene.h
CraftRogue/: CMakeLists.txt  CraftRogue.vcxproj  CraftRogue.vcxproj.filters
CraftRogue/Source/: CraftRogueGameEntry.cpp
CraftRogue/Source/Components/: Health.cpp  Health.h  PlayerUpgradeComponent.cpp  PlayerUpgradeComponent.h
CraftRogue/Source/GameObjects/: Enemy.cpp  Enemy.h  EnemyRogue.cpp  EnemyRogue.h  Player.cpp  Player.h
CraftRogue/Source/GameObjects/Enemies/: EnemyAmeboid.cpp  EnemyAmeboid.h  EnemyRogue.cpp  EnemyRogue.h
CraftRogue/Source/GameObjects/Weapons/: BlastGun.cpp  Bullet.cpp  Bullet.h  PlasmaBullet.cpp  PlasmaBullet.h  PlasmaGun.cpp  PlasmaGun.h  WaveGun.cpp  WaveGun.h  Weapon.h
CraftRogue/Source/Scenes/: RogueScene.cpp  RogueScene.h
CraftShooterGame/: CMakeLists 32bits.txt  CMakeLists.txt  CraftShooterGame.sln  CraftShooterGame.vcxproj  CraftShooterGame.vcxproj.filters
CraftShooterGame/Source/: GameEntry.cpp  ShooterGameEntry.cpp
CraftShooterGame/Source/Components/: PlayerController.cpp  PlayerController.h
CraftShooterGame/Source/GameObjects/: Paddle.cpp  Paddle.h
CraftShooterGame/Source/GameObjects/Pong/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h
CraftShooterGame/Source/GameObjects/Shooter/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  PlayerShip.cpp  PlayerShip.h
CraftShooterGame/Source/Scenes/: PongScene.cpp  PongScene.h
CraftShooterGame/Source/Scenes/Pong/: PongScene.cpp  PongScene.h
CraftShooterGame/Source/Scenes/Shooter/: ShooterScene.cpp  ShooterScene.h
Games/Breaker/Source/: BreakerGameEntry.cpp
Games/Match/Source/: CraftMatchGameEntry.cpp  Grid.cpp  Grid.h  UnitSelector.cpp  UnitSelector.h
Games/Rogue/Source/: CraftRogueGameEntry.cpp
Games/Shooter/Source/: ShooterGameEntry.cpp
Source/: Core.h  conio.h  l_conio.h
Source/Core/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  Component.h  Console.h  EntryPoint.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  Export.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  LineDrawer.cpp  LineDrawer.h  Particle.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Typedefs.h  UIHandler.h
Source/Core/AI/: AIMovement.cpp  AIMovement.h  Pathfinder.cpp  Pathfinder.h  Pathfinding.cpp  Pathfinding.h
Source/Core/AIBehavior/: ActionNode.h  BehaviorTree.cpp  BehaviorTree.h  CompositeNode.h  FailedNode.cpp  FailedNode.h  GoToTargetNode.cpp  GoToTargetNode.h  InProgressNode.cpp  InProgressNode.h  Node.h  NodeBase.h  RootNode.cpp  RootNode.h  Selector.cpp  Selector.h  SequencerNode.cpp  SequencerNode.h  SuccessNode.cpp  SuccessNode.h  WaitNode.cpp  WaitNode.h
Source/Core/Component/: Component.h  DestructionEffectComponent.cpp  DestructionEffectComponent.h  PlayerController.cpp  PlayerController.h  RigidbodyComponent.cpp  RigidbodyComponent.h  SpringComponent.cpp  SpringComponent.h
Source/Core/ParticleSystem/: BlastParticle.cpp  BlastParticle.h  ParticleObject.cpp  ParticleObject.h  ParticleSource.h  (+5 more)
Source/CoreStructs/: Transform.h  Vector.h
Source/Event/: Event.h  EventDispatcher.cpp  EventDispatcher.h
Source/Graphics/: Camera.cpp  Camera.h  DestructionEffectComponent.cpp  DestructionEffectComponent.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sprite.h  UIHandler.cpp  UIHandler.h
Source/Input/: Input.cpp  Input.h  PlayerController.cpp  PlayerController.h
Source/Main/: Engine.h
Source/Math/: Transform.h  Vector2.h
Source/Physics/: Collision.cpp  Collision.h
consolecraftengine/: PKGBUILD  consolecraftengine-debug-latest-1-x86_64.pkg.tar.zst  consolecraftengine-latest-1-x86_64.pkg.tar.zst
consolecraftengine/consolecraftengine/: FETCH_HEAD  config  packed-refs
docs/: quickstart.md
(+161 files in other folders)
